add initial referrer to vistors and users tables
